--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "antd": "^5.18.3",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-select": "^5.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
