--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_URI=mongodb+srv://ngothecaoson:0333288883<Son>@cluster0.ykw1n.mongodb.net/?retryWrites=true&w=majority
+ACCESS_TOKEN_SECRET=your_access_token_secret
+REFRESH_TOKEN_SECRET=your_refresh_token_secret
+ACCESS_TOKEN_EXPIRATION=12h
+REFRESH_TOKEN_EXPIRATION=24h
