--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.12",
     "antd": "^5.18.3",
+    "bcryptjs": "^2.4.3",
+    "formidable": "^3.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0",
-    "next": "14.2.4",
+    "mongoose": "^8.7.2",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-select": "^5.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
