--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +13,7 @@
     "@types/lodash": "^4.17.12",
     "antd": "^5.18.3",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -22,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-select": "^5.8.1"
+    "react-select": "^5.8.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
