Re-commit without sensitive data

--- a/package.json
+++ b/package.json
@@ -10,20 +10,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@eslint/config-array": "^0.19.1",
+    "@eslint/object-schema": "^2.1.5",
+    "@react-oauth/google": "^0.12.1",
+    "@tensorflow/tfjs-backend-webgl": "^3.21.0",
+    "@tensorflow/tfjs-converter": "^3.21.0",
     "@types/lodash": "^4.17.12",
     "antd": "^5.18.3",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.7",
     "cloudinary": "^2.5.1",
+    "core-js": "^3.39.0",
     "formidable": "^3.5.2",
+    "glob": "^11.0.0",
+    "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "lru-cache": "^11.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.2",
     "next": "^14.2.17",
-    "react": "^18",
-    "react-dom": "^18",
+    "next-auth": "^5.0.0-beta.25",
+    "openai": "^4.77.0",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.1",
+    "recharts": "^2.15.0",
+    "rimraf": "^6.0.1",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
@@ -33,8 +49,10 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^8",
+    "@types/recharts": "^1.8.29",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.4",
+    "patch-package": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
